# goldfishblockchain

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithms/src/: algos.cpp
algorithms/tests/: algostest.cpp
datastructures/src/: datastruct.cpp
